--- a/meta/main.yml
+++ b/meta/main.yml
@@ -11,7 +11,6 @@ galaxy_info:
     versions:
     - 24
     - 25
-    - 26
 
   - name: Ubuntu
     versions:
@@ -24,5 +23,6 @@ galaxy_info:
     - workstation
     - ide
     - javascript
+    - webstorm
 
 dependencies: []
